# HybridMerge

./: .gitattributes  .gitignore  README.md  requirements.txt
cpp/: CMakeLists.txt  ai.cpp  ai.hpp  bindings.cpp  expert_logger.cpp  game.cpp  game.hpp  game_defs.hpp  merge.cpp  merge.hpp  utils.cpp  utils.hpp
models/: bc_policy_with_preview.pt
ppo_tensorboard_logs/PPO_1/: events.out.tfevents.1748822950.LAPTOP-2U496KON.8416.0
ppo_tensorboard_logs/ppo_bc_preview_v1/PPO_1/: events.out.tfevents.1748921139.LAPTOP-2U496KON.35088.0
ppo_tensorboard_logs/ppo_preview_v2_deep_explore/PPO_0/: events.out.tfevents.1748991073.LAPTOP-2U496KON.17380.0
ppo_tensorboard_logs/ppo_v2_explore/PPO_1/: events.out.tfevents.1748827006.LAPTOP-2U496KON.11324.0
ppo_tensorboard_logs/ppo_v2_explore/PPO_2/: events.out.tfevents.1748843419.LAPTOP-2U496KON.33980.0
ppo_tensorboard_logs/ppo_v3_5M_overnight/PPO_0/: events.out.tfevents.1748847307.LAPTOP-2U496KON.24524.0  events.out.tfevents.1748847475.LAPTOP-2U496KON.34752.0
ppo_tensorboard_logs/ppo_v4_fine_tuned/PPO_0/: events.out.tfevents.1748882873.LAPTOP-2U496KON.4548.0  events.out.tfevents.1748882941.LAPTOP-2U496KON.32808.0  events.out.tfevents.1748883254.LAPTOP-2U496KON.30548.0
ppo_tensorboard_logs/ppo_v5_superhuman_push/PPO_0/: events.out.tfevents.1748895333.LAPTOP-2U496KON.33440.0
src/agents/: evaluate_cpp_expert.py  train_ppo.py
src/bc/: evaluate_bc.py  train_bc.py
src/env/: _merge_engine.cp313-win_amd64.pyd  merge_env.py
src/phase5_self_play/: mcts.py  neural_network.py
